# cmake-demo

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeCache.txt  CMakeDemoConfig.cmake.in  Makefile  build_info.cpp.in  cmake_install.cmake  config.h.in
cmake-tutorial/: CMakeLists.txt
cmake-tutorial/examples/basic/conditions/: CMakeLists.txt
cmake-tutorial/examples/basic/functions/: CMakeLists.txt
cmake-tutorial/examples/basic/loops/: CMakeLists.txt
cmake-tutorial/examples/build_system/imported_target/: CMakeLists.txt
cmake-tutorial/examples/build_system/interface_lib/: CMakeLists.txt
cmake-tutorial/examples/build_system/target_alias/: CMakeLists.txt
cmake-tutorial/examples/dependency/find_package/: CMakeLists.txt
cmake-tutorial/examples/dependency/package_config/: CMakeLists.txt
cmake-tutorial/examples/dependency/transitive_deps/: CMakeLists.txt
cmake/libs/math/: Makefile  cmake_install.cmake
cmake/libs/utils/: Makefile  cmake_install.cmake
cmake/src/: Makefile  cmake_install.cmake
cmake_integration/custom_command/: CMakeLists.txt  main.cpp
cmake_integration/external_project/: CMakeLists.txt  main.cpp
cmake_integration/find_package/: CMakeLists.txt  main.cpp
cmake_integration/system_call/: CMakeLists.txt  main.cpp
cmake_integration_examples/: CMakeLists.txt
examples/advanced_generator_expressions/compile_language_example/: CMakeLists.txt  helper.c  main.cpp
examples/advanced_generator_expressions/file_generate_example/: CMakeLists.txt  main.cpp
examples/advanced_generator_expressions/target_property_example/: CMakeLists.txt  lib_source.cpp  main.cpp
examples/platform_specific/pie_check_example/: CMakeLists.txt  main.cpp
examples/platform_specific/vs_properties_example/: CMakeLists.txt  main.cpp
examples/platform_specific/xcode_attributes_example/: CMakeLists.txt  main.cpp
include/: demo_lib.h  logger.h  math_utils.h
libs/math/: CMakeLists.txt  add.h  sub.h
libs/utils/: CMakeLists.txt  logger.c  logger.h
makefile_project/: Makefile
makefile_project/include/: demo.h
makefile_project/src/: hello.c  util.c
src/: CMakeLists.txt  demo_lib.cpp  logger.cpp  main.c  math_utils.cpp
tests/: test_demo.cpp
